--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   flutter_inappwebview: ^6.1.5
   permission_handler: ^11.3.1
   url_launcher: ^6.3.1
+  syncfusion_flutter_charts: ^27.1.55
+  http: ^1.2.2
+  cached_network_image: ^3.4.1
+  flutter_svg: ^2.0.10+1
+  google_fonts: ^6.2.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -62,8 +68,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
+    - assets/icons/
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
